crates/teleport/tests/compile-fail/conflicting_attrs.stderr
error: procedure type already specified (use only one of `query`, `command`, or `form`)
 --> tests/compile-fail/conflicting_attrs.rs:6:17
  |
6 | #[remote(query, command)]
  |                 ^^^^^^^

warning: unused import: `AppError`
 --> tests/compile-fail/conflicting_attrs.rs:1:24
  |
1 | use teleport::{remote, AppError};
  |                        ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
